[gd_scene load_steps=20 format=2]

[ext_resource path="res://NewGame_Menu.gd" type="Script" id=1]
[ext_resource path="res://MenuBotFight.tscn" type="PackedScene" id=2]
[ext_resource path="res://montserrat_eb_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://tank/grey_tank.png" type="Texture" id=4]
[ext_resource path="res://players name.tres" type="DynamicFont" id=5]
[ext_resource path="res://tank/grey_tank_inverted.png" type="Texture" id=6]
[ext_resource path="res://tank/blue_tank.png" type="Texture" id=7]
[ext_resource path="res://tank/blue_tank_inverted.png" type="Texture" id=8]
[ext_resource path="res://tank/green_tank.png" type="Texture" id=9]
[ext_resource path="res://tank/green_tank_inverted.png" type="Texture" id=10]
[ext_resource path="res://tank/orange_tank.png" type="Texture" id=11]
[ext_resource path="res://tank/orange_tank_inverted.png" type="Texture" id=12]
[ext_resource path="res://tank/pink_tank.png" type="Texture" id=13]
[ext_resource path="res://tank/pink_tank_inverted.png" type="Texture" id=14]
[ext_resource path="res://tank/yellow_tank.png" type="Texture" id=15]
[ext_resource path="res://tank/yellow_tank_inverted.png" type="Texture" id=16]
[ext_resource path="res://icons/scorched earth remastered.png" type="Texture" id=17]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="NewGame_Menu" type="Node2D" groups=[
"SaveFiles",
]]
script = ExtResource( 1 )

[node name="bots" type="Container" parent="."]
margin_left = 370.0
margin_top = 135.0
margin_right = 1650.0
margin_bottom = 855.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="MenuBotFight" parent="bots" instance=ExtResource( 2 )]

[node name="left" type="Container" parent="."]
editor/display_folded = true
margin_right = 1280.0
margin_bottom = 720.0

[node name="ColorRect1" type="ColorRect" parent="left"]
margin_right = 370.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="ColorRect2" type="ColorRect" parent="left"]
margin_left = 370.0
margin_right = 1280.0
margin_bottom = 135.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="ColorRect3" type="ColorRect" parent="left"]
margin_left = 370.0
margin_top = 639.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="ColorRect4" type="ColorRect" parent="left"]
margin_left = 1266.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="ready_Players" type="Container" parent="."]
margin_left = 375.0
margin_top = 639.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Players_Label" type="Label" parent="ready_Players"]
margin_left = 25.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "Players:"
align = 2

[node name="Player1" type="Container" parent="ready_Players"]
visible = false
margin_left = 270.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 20.0

[node name="playerTank_color1" type="Sprite" parent="ready_Players/Player1"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player1_Label" type="Label" parent="ready_Players/Player1"]
margin_left = -90.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 5 )
text = "Player 1"
align = 1

[node name="Player2" type="Container" parent="ready_Players"]
visible = false
margin_left = 370.0
margin_top = 20.0
margin_right = 370.0
margin_bottom = 20.0

[node name="playerTank_color2" type="Sprite" parent="ready_Players/Player2"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player2_Label" type="Label" parent="ready_Players/Player2"]
margin_left = -90.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "Player 2"
align = 1

[node name="Player3" type="Container" parent="ready_Players"]
editor/display_folded = true
visible = false
margin_left = 470.0
margin_top = 20.0
margin_right = 470.0
margin_bottom = 20.0

[node name="playerTank_color3" type="Sprite" parent="ready_Players/Player3"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player3_Label" type="Label" parent="ready_Players/Player3"]
margin_left = -90.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 5 )
text = "Player 3"
align = 1

[node name="Player4" type="Container" parent="ready_Players"]
editor/display_folded = true
visible = false
margin_left = 570.0
margin_top = 20.0
margin_right = 570.0
margin_bottom = 20.0

[node name="playerTank_color4" type="Sprite" parent="ready_Players/Player4"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player4_Label" type="Label" parent="ready_Players/Player4"]
margin_left = -90.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 5 )
text = "Player 4"
align = 1

[node name="Player5" type="Container" parent="ready_Players"]
editor/display_folded = true
visible = false
margin_left = 670.0
margin_top = 20.0
margin_right = 670.0
margin_bottom = 20.0

[node name="playerTank_color5" type="Sprite" parent="ready_Players/Player5"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player5_Label" type="Label" parent="ready_Players/Player5"]
margin_left = -90.0
margin_top = 30.0
margin_right = 96.998
margin_bottom = 82.0
custom_fonts/font = ExtResource( 5 )
text = "Player 5"
align = 1

[node name="Player6" type="Container" parent="ready_Players"]
editor/display_folded = true
visible = false
margin_left = 770.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 20.0

[node name="playerTank_color6" type="Sprite" parent="ready_Players/Player6"]
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="Player6_Label" type="Label" parent="ready_Players/Player6"]
margin_left = -90.0
margin_top = 30.0
margin_right = 97.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 5 )
text = "Player 6"
align = 1

[node name="ready_Button" type="Button" parent="."]
margin_left = 30.0
margin_top = 602.0
margin_right = 334.0
margin_bottom = 690.0
custom_fonts/font = ExtResource( 3 )
text = "Ready"

[node name="PlayerName_Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 356.046
margin_right = 334.0
margin_bottom = 416.046
custom_fonts/font = ExtResource( 3 )
text = "Player name: "

[node name="ChoseColor_Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 481.479
margin_right = 334.0
margin_bottom = 541.479
custom_fonts/font = ExtResource( 3 )
text = "Chose color:"

[node name="PlayerName_Enter" type="LineEdit" parent="."]
margin_left = 65.0
margin_top = 420.0
margin_right = 305.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 2 )
align = 1
max_length = 8
clear_button_enabled = true
placeholder_text = "Player 1"

[node name="color_Buttons" type="Container" parent="."]
margin_left = 65.0
margin_top = 535.0
margin_right = 305.0
margin_bottom = 575.01

[node name="grey_Button" type="TextureButton" parent="color_Buttons"]
margin_right = 89.0
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )

[node name="blue_Button" type="TextureButton" parent="color_Buttons"]
margin_left = 40.0
margin_right = 129.0
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="green_Button" type="TextureButton" parent="color_Buttons"]
margin_left = 80.0
margin_right = 169.0
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="orange_Button" type="TextureButton" parent="color_Buttons"]
margin_left = 120.0
margin_right = 209.0
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="pink_Button" type="TextureButton" parent="color_Buttons"]
margin_left = 160.0
margin_right = 249.02
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="yellow_Button" type="TextureButton" parent="color_Buttons"]
margin_left = 200.0
margin_right = 289.01
margin_bottom = 53.0
rect_scale = Vector2( 0.4, 0.5 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 788.363, 205.419 )
scale = Vector2( 1.5, 1.7 )
texture = ExtResource( 17 )

[connection signal="pressed" from="ready_Button" to="." method="_on_ready_Button_pressed"]
[connection signal="text_changed" from="PlayerName_Enter" to="." method="_on_PlayerName_Enter_text_changed"]
[connection signal="pressed" from="color_Buttons/grey_Button" to="." method="_on_grey_Button_pressed"]
[connection signal="pressed" from="color_Buttons/blue_Button" to="." method="_on_blue_Button_pressed"]
[connection signal="pressed" from="color_Buttons/green_Button" to="." method="_on_green_Button_pressed"]
[connection signal="pressed" from="color_Buttons/orange_Button" to="." method="_on_orange_Button_pressed"]
[connection signal="pressed" from="color_Buttons/pink_Button" to="." method="_on_pink_Button_pressed"]
[connection signal="pressed" from="color_Buttons/yellow_Button" to="." method="_on_yellow_Button_pressed"]
